fix p spacing

--- a/src/css/blocks/_lesson.scss
+++ b/src/css/blocks/_lesson.scss
@@ -31,10 +31,10 @@ $title_bar_space_low: 90px;
     --lesson__np_button-vspace: calc(#{$np_button-vspace} * 1vw);
     --lesson__np_button-hspace: calc(#{$np_button-hspace} * 1vw);
     --lesson__text-margin: 1em;
-    --lesson__text-p-spacing: calc(#{$text-p-top-margin} * 1vw);
     --lesson__goto_button-width: calc(#{$goto_button-width} * 1vw * 1);
     --lesson__goto_button-height: calc(#{$goto_button-height} * 1vw * 1);
     --lesson__goto_button-font-size: calc(#{$goto_button-font-size} * 1vw);
+    --lesson__text-p-spacing: 1em;
   }
 }
 
